--- a/FID/.settings/org.eclipse.core.resources.prefs
+++ b/FID/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/fidservlet/checkPeopleIn.java=UTF-8
 encoding//src/fidservlet/loginCheck.java=UTF-8
+encoding/<project>=UTF-8
